Upgraded some libs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,11 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     compileOnly 'org.projectlombok:lombok:1.16.20'
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha3'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.1'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.0-alpha3'
-    implementation 'androidx.legacy:legacy-support-v13:1.0.0-alpha3'
-    implementation 'com.google.android.material:material:1.0.0-alpha3'
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.0-beta01'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0-beta01'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
