--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,17 +26,27 @@ android {
 }
 
 dependencies {
+    def room_version = "2.0.0-beta01"
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
     compileOnly 'org.projectlombok:lombok:1.16.20'
+
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.0-beta01'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.0-beta01'
     implementation 'com.google.android.material:material:1.0.0-beta01'
+
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
