--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0-beta01'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0-beta01'
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.vectordrawable:vectordrawable:1.0.0-beta01'
     implementation 'com.google.android.material:material:1.0.0-beta01'
