--- a/locallinkschool/build.gradle
+++ b/locallinkschool/build.gradle
@@ -36,17 +36,17 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    api 'androidx.appcompat:appcompat:1.0.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    api 'androidx.recyclerview:recyclerview-selection:1.0.0'
+    api "androidx.room:room-runtime:$room_version"
+    api 'androidx.vectordrawable:vectordrawable:1.0.0'
+    api 'com.google.android.material:material:1.0.0'
 
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    api 'com.google.code.gson:gson:2.8.2'
+    api 'com.squareup.retrofit2:retrofit:2.4.0'
+    api 'com.squareup.retrofit2:converter-gson:2.4.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
