--- a/locallinkschool/build.gradle
+++ b/locallinkschool/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    def room_version = "2.0.0-rc01"
+    def room_version = "2.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
