--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -26,17 +26,12 @@ android {
 }
 
 dependencies {
-    def room_version = "2.0.0-rc01"
-
+    def room_version = "2.0.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
     compileOnly 'org.projectlombok:lombok:1.16.20'
-
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
     annotationProcessor "androidx.room:room-compiler:$room_version"
-
-    implementation project(":locallinkschool")
-
+    implementation project(':locallinkschool')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-beta01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta01'
