--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,29 @@ android {
 }
 
 dependencies {
-    def room_version = "2.0.0"
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    def room_version = "2.1.0-alpha01"
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     compileOnly 'org.projectlombok:lombok:1.16.20'
+
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
     implementation project(':locallinkschool')
+
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.0.0'
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta01'
+    androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
 }
