--- a/locallinkschool/build.gradle
+++ b/locallinkschool/build.gradle
@@ -1,57 +1,2 @@
-apply plugin: 'com.android.library'
-
-android {
-    compileSdkVersion 28
-
-    defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
-    }
-}
-
-dependencies {
-    def room_version = "2.0.0"
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    compileOnly 'org.projectlombok:lombok:1.16.20'
-
-    annotationProcessor 'org.projectlombok:lombok:1.16.20'
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-
-    api 'androidx.appcompat:appcompat:1.0.0'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
-    api 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    api 'androidx.recyclerview:recyclerview-selection:1.0.0'
-    api "androidx.room:room-runtime:$room_version"
-    api 'androidx.vectordrawable:vectordrawable:1.0.0'
-    api 'com.google.android.material:material:1.0.0'
-
-    api 'com.google.code.gson:gson:2.8.2'
-    api 'com.squareup.retrofit2:retrofit:2.4.0'
-    api 'com.squareup.retrofit2:converter-gson:2.4.0'
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta01'
-}
-repositories {
-    mavenCentral()
-}
+configurations.maybeCreate("default")
+artifacts.add("default", file('locallinkschool-debug.aar'))
