--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -30,12 +32,10 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compileOnly 'org.projectlombok:lombok:1.16.20'
+    kapt "androidx.room:room-compiler:$room_version"
 
-    annotationProcessor 'org.projectlombok:lombok:1.16.20'
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-
-    implementation project(':locallinkschool')
+    debugImplementation project(':locallinkschool-debug')
+    releaseImplementation project(':locallinkschool-release')
 
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -51,4 +51,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-beta02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-beta02'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
