--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.vectordrawable:vectordrawable:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation "org.jetbrains.anko:anko-commons:0.10.4"
 
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
